<resources>
    <string name="app_name">One Solution</string>
    <string name="logo">One Solution Logo</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="already_a_user">Already A User..</string>
    <string name="sign_in">Sign In</string>
    <string name="verify">Verify</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_code">Resend Code</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_now">Register Now</string>
    <string name="complaint_photo">Complaint Photo</string>
    <string name="complaint_address">Complaint Address</string>
    <string name="posted_date">Posted date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="sign_in_sign_up">Sign In / Sign Up</string>
    <string name="registered_number">Registered Number</string>
    <string name="complaining_person_name">Complaining Person Name</string>
    <string name="complain_address">Complain Address</string>
    <string name="date">Date</string>
    <string name="complainer_name">Complainer Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="sign_out">Sign Out</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="city_village">City/Village</string>
    <string name="nearby_location">Nearby Location</string>
    <string name="are_you_an_officer">Are you an officer?</string>
    <string name="submit_complaint">Submit Complaint</string>
    <string name="register_a_new_complaint">Register a new Complaint</string>
    <string name="complaint_photos">Complaint Photos</string>
    <string name="add_a_new_photo">Add a new Photo</string>
    <string name="_2_photos_selected">2 photos Selected</string>
    <string-array name="complaint_status">
        <item>Pending</item>
        <item>Solved</item>
    </string-array>
    <string name="otp">OTP</string>
    <string name="complaint_images">Complaint Images</string>
    <string name="complaint_description">Complaint Description</string>
    <string name="country">Country</string>
    <string name="selected_image">Selected Image</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="india">India</string>
    <string name="status">Status</string>
    <string name="person_name">Person Name</string>
    <string name="locate_me_button">Locate Me Button</string>
    <string name="complainer">Complainer</string>
    <string name="locate_me_desc">This will open google map of given location</string>
    <string name="description">Description</string>
    <string name="attached_photos">Attached photos</string>
    <string name="noImageUploaded">No image uploaded by user</string>
    <string name="imageNo">0</string>
    <string name="about_us_desc">This app <b>One Solution</b> has been developed by <b>NIT Kurukshetra</b> students. It facilitates the users to use their smartphone to work smartly. Using this app, you can submit your nearby issues or complaints to the concerned authority. All your need to create a free account and submit complaint and get status sitting at home.</string>
    <string name="developers">-:Developers:-</string>
    <string name="tushar_name">Tushar</string>
    <string name="nikita_email">nikita_11912005@nitkkr.ac.in</string>
    <string name="sanjay_name">Sanjay Verma</string>
    <string name="tushar_email">tusharginotra2000@gmail.com</string>
    <string name="nikita_name">Nikita</string>
    <string name="sanjay_email">vermasanjay15907@gmail.com</string>
    <string name="nitkkr_logo">NITKKR Logo</string>
    <string name="save">Save</string>
    <string name="about_us">About Us</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="attach_more_document">Attach More Document</string>
    <string name="add_these_photos">Add these Photos</string>
    <string name="work_photos">Submitted Photos</string>
    <string name="no_work_has_been_done">No work has been done</string>
    <string-array name="array_indian_states">
        <item>Select Your State</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="array_default_districts">
        <item>Select Your District</item>
    </string-array>
    <string-array name="array_andhra_pradesh_districts">
        <item>Select Your District</item>
        <item>Anantapur</item>
        <item>Chittoor</item>
        <item>East Godavari</item>
        <item>Guntur</item>
        <item>Kadapa</item>
        <item>Krishna</item>
        <item>Kurnool</item>
        <item>Nellore</item>
        <item>Prakasam</item>
        <item>Srikakulam</item>
        <item>Visakhapatnam</item>
        <item>Vizianagaram</item>
        <item>West Godavari</item>
    </string-array>
    <string-array name="array_arunachal_pradesh_districts">
        <item>Select Your District</item>
        <item>Anjaw</item>
        <item>Siang</item>
        <item>Changlang</item>
        <item>Dibang Valley</item>
        <item>East Kameng</item>
        <item>East Siang</item>
        <item>Kamle</item>
        <item>Kra Daadi</item>
        <item>Kurung Kumey</item>
        <item>Lepa Rada</item>
        <item>Lohit</item>
        <item>Longding</item>
        <item>Lower Dibang Valley</item>
        <item>Lower Siang</item>
        <item>Lower Subansiri</item>
        <item>Namsai</item>
        <item>Pakke Kessang</item>
        <item>Papum Pare</item>
        <item>Shi Yomi</item>
        <item>Tawang</item>
        <item>Tirap</item>
        <item>Upper Siang</item>
        <item>Upper Subansiri</item>
        <item>West Kameng</item>
        <item>West Siang</item>
    </string-array>
    <string-array name="array_assam_districts">
        <item>Select Your District</item>
        <item>Bajali</item>
        <item>Baksa</item>
        <item>Barpeta</item>
        <item>Biswanath</item>
        <item>Bongaigaon</item>
        <item>Cachar</item>
        <item>Charaideo</item>
        <item>Chirang</item>
        <item>Darrang</item>
        <item>Dhemaji</item>
        <item>Dhubri</item>
        <item>Dibrugarh</item>
        <item>Dima Hasao</item>
        <item>Goalpara</item>
        <item>Golaghat</item>
        <item>Hailakandi</item>
        <item>Hojai</item>
        <item>Jorhat</item>
        <item>Kamrup</item>
        <item>Kamrup Metropolitan</item>
        <item>Karbi Anglong</item>
        <item>Karimganj</item>
        <item>Kokrajhar</item>
        <item>Lakhimpur</item>
        <item>Majuli</item>
        <item>Morigaon</item>
        <item>Nagaon</item>
        <item>Nalbari</item>
        <item>Sivasagar</item>
        <item>Sonitpur</item>
        <item>South Salmara-Mankachar</item>
        <item>Tinsukia</item>
        <item>Udalguri</item>
        <item>West Karbi Anglong</item>
    </string-array>
    <string-array name="array_bihar_districts">
        <item>Select Your District</item>
        <item>Araria</item>
        <item>Arwal</item>
        <item>Aurangabad</item>
        <item>Banka</item>
        <item>Begusarai</item>
        <item>Bhagalpur</item>
        <item>Bhojpur</item>
        <item>Buxar</item>
        <item>Darbhanga</item>
        <item>East Champaran</item>
        <item>Gaya</item>
        <item>Gopalganj</item>
        <item>Jamui</item>
        <item>Jehanabad</item>
        <item>Kaimur</item>
        <item>Katihar</item>
        <item>Khagaria</item>
        <item>Kishanganj</item>
        <item>Lakhisarai</item>
        <item>Madhepura</item>
        <item>Madhubani</item>
        <item>Munger</item>
        <item>Muzaffarpur</item>
        <item>Nalanda</item>
        <item>Nawada</item>
        <item>Patna</item>
        <item>Purnia</item>
        <item>Rohtas</item>
        <item>Saharsa</item>
        <item>Samastipur</item>
        <item>Saran</item>
        <item>Sheikhpura</item>
        <item>Sheohar</item>
        <item>Sitamarhi</item>
        <item>Siwan</item>
        <item>Supaul</item>
        <item>Vaishali</item>
        <item>West Champaran</item>
    </string-array>
    <string-array name="array_chhattisgarh_districts">
        <item>Select Your District</item>
        <item>Balod</item>
        <item>Baloda Bazar</item>
        <item>Balrampur Ramanujganj</item>
        <item>Bastar</item>
        <item>Bemetara</item>
        <item>Bijapur</item>
        <item>Bilaspur</item>
        <item>Dantewada</item>
        <item>Dhamtari</item>
        <item>Durg</item>
        <item>Gariaband</item>
        <item>Gaurela Pendra Marwahi</item>
        <item>Janjgir Champa</item>
        <item>Jashpur</item>
        <item>Kabirdham</item>
        <item>Kanker</item>
        <item>Kondagaon</item>
        <item>Korba</item>
        <item>Koriya</item>
        <item>Mahasamund</item>
        <item>Mungeli</item>
        <item>Narayanpur</item>
        <item>Raigarh</item>
        <item>Raipur</item>
        <item>Rajnandgaon</item>
        <item>Sukma</item>
        <item>Surajpur</item>
        <item>Surguja</item>
    </string-array>
    <string-array name="array_goa_districts">
        <item>Select Your District</item>
        <item>North Goa</item>
        <item>South Goa</item>
    </string-array>
</resources>