<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivComplaintPhoto"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:riv_border_color="#333333"
            app:riv_border_width="3dp"
            app:riv_corner_radius="40dp"
            app:riv_mutate_background="true"
            app:riv_tile_mode="repeat" />

        <TextView
            android:id="@+id/tvComplaingPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/complaining_person_name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ivComplaintPhoto"
            app:layout_constraintTop_toTopOf="@+id/ivComplaintPhoto" />

        <TextView
            android:id="@+id/tvComplaintAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/complain_address"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/tvComplaingPersonName"
            app:layout_constraintTop_toBottomOf="@+id/tvComplaingPersonName" />

        <TextView
            android:id="@+id/tvComplaintDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvComplaingPersonName" />

        <ImageView
            android:id="@+id/ivStatus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:background="#FFD600"
            android:contentDescription="@string/complaint_status"
            app:layout_constraintBottom_toBottomOf="@+id/ivComplaintPhoto"
            app:layout_constraintEnd_toEndOf="@+id/tvComplaintDate" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>